# error-gateway

./: .dockerignore  .env.example  .gitignore  DOCKER_HUB.md  LICENSE  README.md  docker-compose.full.yml  docker-compose.yml
.github/workflows/: docker-publish.yml
docs/: README_en.md  README_ru.md
docs/integration/: examples.md  loki.md
src/: .dockerignore  Dockerfile  pyproject.toml
src/app/: main.py
src/app/api/: __init__.py  router.py
src/app/api/v1/: __init__.py  dependencies.py  rate_limit_deps.py
src/app/api/v1/routes/: __init__.py  errors.py  groups.py  health.py  loki.py
src/app/api/v1/schemas/: __init__.py  error_event.py  error_group.py  loki.py
src/app/application/: __init__.py
src/app/application/dto/: dto.py
src/app/application/interfaces/: __init__.py  interfaces.py
src/app/application/services/: loki_alert_processor.py
src/app/application/use_cases/: use_cases.py
src/app/core/: __init__.py  config.py  container.py  database.py  logger.py  metrics.py  shutdown.py
src/app/domain/: __init__.py
src/app/domain/entities/: error_event.py  error_group.py  notification.py
src/app/domain/repositories/: __init__.py  interfaces.py
src/app/domain/services/: __init__.py  services.py
src/app/infrastructure/: __init__.py
src/app/infrastructure/db/: models.py  repositories.py
src/app/infrastructure/loki/: __init__.py  client.py
src/app/infrastructure/notifications/: factory.py  service.py  utils.py
src/app/infrastructure/notifications/email/: __init__.py  channel.py
src/app/infrastructure/notifications/telegram/: __init__.py  channel.py
src/app/infrastructure/rate_limit/: limiter.py
src/data/: error-gateway.db  error-gateway.db-shm  error-gateway.db-wal
src/tests/: conftest.py
src/tests/api/: __init__.py  test_dependencies.py  test_integration.py  test_routes.py  test_schemas_error_event.py
src/tests/application/: test_loki_alert_processor_extended.py  test_use_cases.py
src/tests/core/: test_components.py  test_config_email_to.py  test_config_email_validation.py  test_cors.py
src/tests/domain/: __init__.py  test_entities.py  test_services.py
src/tests/infrastructure/: __init__.py  test_email_channel_extended.py  test_loki_client.py  test_notification_factory.py  test_notification_utils.py  test_notifications.py  test_rate_limit.py  test_rate_limit_cleanup.py  test_rate_limit_limiter.py  test_repositories.py
